chore: 清理未使用页面并精简路由

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,11 +1,7 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/processing/processing",
-    "pages/size/size",
-    "pages/background/background",
-    "pages/preview/preview",
-    "pages/result/result"
+    "pages/preview/preview"
   ],
   "window": {
     "navigationBarTextStyle": "black",
